[package]
name = "perle"
version = "0.1.0"
edition = "2024"
authors = ["Yuri <your.email@example.com>"]
description = "A beautiful and simple CLI Pomodoro timer"
repository = "https://github.com/over9000rpm/perle"
license = "MIT"
keywords = ["pomodoro", "timer", "productivity", "cli"]
categories = ["command-line-utilities"]


[dependencies]
